# aim

./: Cargo.toml  DESIGN.md  Justfile  README.md  install.sh
.github/workflows/: ci.yml  release.yml
examples/mariadb/: aim.toml  schema.sql
examples/mariadb/migrations/: 000001_initial_schema.up.sql
examples/mysql/: aim.toml
examples/mysql/migrations/: 000001_initial_schema.down.sql
examples/postgres/: aim.toml  schema.sql
examples/postgres/migrations/: 000001_initial_schema.down.sql  000001_initial_schema.up.sql
examples/sqlite/: aim.toml  schema.sql
examples/sqlite/migrations/: 001_initial_schema.down.sql  001_initial_schema.up.sql  002_add_email_to_users_perms_to_groups_and_group_members_view.down.sql  002_add_email_to_users_perms_to_groups_and_group_members_view.up.sql
src/: auth.rs  config.rs  diff.rs  display.rs  error.rs  lib.rs  main.rs  migration.rs  output.rs  schema.rs  seed.rs
src/agent/: mod.rs  prompt.rs  tools.rs
src/engine/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
src/migration/: dbmate.rs  flyway.rs  golang_migrate.rs  goose.rs  migrate.rs  mod.rs  refinery.rs  sqitch.rs  sqlx.rs
