[package]
name = "aim"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rig-core = "0.33.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
schemars = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlparser = "0.61.0"
syntect = "5.3.0"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.1.0"
yansi = "1.0.1"

[dev-dependencies]
tempfile = "3.27.0"
